load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:resolve go github.com/irfansharif/solver @com_github_irfansharif_solver//:solver
gazelle(
    name = "gazelle",
    prefix = "github.com/irfansharif/allocator",
)

go_library(
    name = "allocator",
    srcs = ["allocator.go"],
    importpath = "github.com/smcheema/allocator",
    visibility = ["//visibility:public"],
    deps = ["@com_github_irfansharif_solver//:solver"],
)

go_test(
    name = "allocator_test",
    srcs = ["allocator_test.go"],
    deps = [
        ":allocator",
        "@com_github_stretchr_testify//require",
    ],
)
